@@ -521,6 +521,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 20726) Title::getLatestRevID's documentation now says that the function
   returns false if the page doesn't exist
 * (bug 20751) ForeignApiRepo now urldecodes filenames when saving to local cache
+* (bug 20730) Fix to Special:Version ViewVC link for branch checkouts
 
 == API changes in 1.16 ==
 
